deceptive site images removed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="tab-2-content-bottom">
                 <div class="phone-tab">
-                    <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg"
+                    <img src="./img/layout1.png"
                         alt="">
                 </div>
                 <div class="animation-card">
@@ -103,7 +103,7 @@
             </div>
             <div class="tab-2-content-bottom">
                 <div class="cartoon-tab">
-                    <img src="//occ-0-299-1490.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABfpnX3dbgjZ-Je8Ax3xn0kXehZm_5L6-xe6YSTq_ucht9TI5jwDMqusWZKNYT8DfGudD0_wWVVTFLiN2_kaQJumz2iivUWbIbAtF.png?r=11f"
+                    <img src="./img/layout2.png"
                         alt="">
                 </div>
             </div>
