added anchor tag

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <div class="showcase-email">
             <input type="email" name="email" placeholder="Email Address">
-            <a href="#" class="btn btn-xl">
+            <a href="login.html" class="btn btn-xl">
                 Get Started<i class="fa-solid fa-chevron-right"></i>
             </a>
         </div>
